@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-18T00:53:58Z",
-  "count" : 245,
+  "timestamp" : "2024-05-18T08:13:42Z",
+  "count" : 132,
   "count_minmax" : [ 112, 296 ],
-  "count_decinc" : [ -51, +296 ],
+  "count_decinc" : [ -164, +296 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
