@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-05-18T08:13:42Z",
+  "count" : 113,
+  "count_minmax" : [ 113, 113 ],
+  "count_decinc" : [ -0, +113 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
+}
