@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-05-18T00:53:58Z",
+  "timestamp" : "2024-05-18T08:13:42Z",
   "count_outdated" : 204883,
   "uniques_outdated" : 2035,
-  "count" : 209031,
-  "uniques" : 2061,
+  "count" : 209144,
+  "uniques" : 2063,
   "clones" : [
     {
       "timestamp": "2024-05-04T00:00:00Z",
-      "count": 245,
+      "count": 132,
       "count_minmax": [ 112, 296 ],
-      "count_decinc": [ 51, 296 ],
+      "count_decinc": [ 164, 296 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 297,
       "count_minmax": [ 111, 297 ],
       "count_decinc": [ 0, 297 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 113,
+      "count_minmax": [ 113, 113 ],
+      "count_decinc": [ 0, 113 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
